react with working websocket example